--- a/Weitianshi/pages/message/browseMe/browseMe.wxml
+++ b/Weitianshi/pages/message/browseMe/browseMe.wxml
@@ -16,7 +16,7 @@
   <scroll-view scroll-y="true" bindscrolltolower="loadMore" scroll-top="{{scroll}}">
     <view class="contacts">
       <block wx:for="{{contacts}}" wx:key="{{item.user_id}}">
-        <view class="card" data-id="{{item.user_id}}" bindtap="userDetail">
+        <view class="card contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
           <view class="user_info flex">
             <view class="redPoint" wx:if="{{item.message_status==0}}"></view>
             <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
@@ -31,7 +31,7 @@
                 <label>
                   <!--需要进行判断 0:不是当前用户人脉1.当前用户的人脉2.待验证3.同意加为人脉-->
                   <view class="addPerson" wx:if="{{item.follow_status == 0||item.follow_status == 3}}">
-                    <view class="addPersonBtn" data-followedId="{{item.user_id}}" data-index="{{index}}" catchtap="addNetWork" data-follow_status="{{item.follow_status}}">加人脉</view>
+                    <view class="addPersonBtn add-contactsm" data-followedId="{{item.user_id}}" data-index="{{index}}" catchtap="addNetWork" data-follow_status="{{item.follow_status}}">加人脉</view>
                   </view>
                   <view class="netWork" wx:if="{{item.follow_status == 2}}">
                     <label class="addNet">待验证</label>
