--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -432,7 +432,7 @@ scroll-view {
   text-align: left;
   margin-right: 16rpx;
   margin-top: 34rpx;
-    text-overflow: ellipsis;
+  text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -530,6 +530,8 @@ button::after {
 
 .contentAll view {
   text-align: left;
+  word-break: break-all;
+  flex-wrap: wrap;
 }
 
 .projectDetailType {
@@ -617,8 +619,9 @@ button::after {
   height: 52rpx;
   margin-top: 18rpx;
   position: absolute;
-  right:32rpx;
+  right: 32rpx;
 }
+
 .push {
   height: 88rpx;
   font-size: 28rpx;
@@ -627,15 +630,18 @@ button::after {
   text-align: center;
   color: #fff;
 }
-.pushing{
-  background:#cccccc;
+
+.pushing {
+  background: #ccc;
   height: 88rpx;
   font-size: 28rpx;
   line-height: 88rpx;
   text-align: center;
   color: #fff;
 }
+
 /*项目详情内容页 */
+
 .followPerson, .brightPoint, .material, .corePerson, .information, .milestone,
 .signFA, .companyBrand {
   background: #fafafa;
@@ -727,7 +733,7 @@ button::after {
   line-height: 39rpx;
   text-align: left;
   overflow: hidden;
-  text-overflow: -o-ellipsis-lastline; 
+  text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -754,6 +760,8 @@ button::after {
   padding: 0 16rpx;
   margin-right: 24rpx;
   flex-wrap: norap;
+  white-space: nowrap;
+  margin-bottom: 18rpx;
 }
 
 .pro_sort_right {
@@ -770,12 +778,13 @@ button::after {
   margin-right: 8rpx;
   margin-bottom: 32rpx;
 }
-.grayName:last-child{
-  margin-bottom:0;
+
+.grayName:last-child {
+  margin-bottom: 0;
 }
 
 .personPosition {
-  margin-top:2rpx;
+  margin-top: 2rpx;
   font-size: 22rpx;
   color: #666;
   letter-spacing: 0;
@@ -877,7 +886,7 @@ button::after {
   line-height: 24rpx;
   text-align: left;
   margin-top: 48rpx;
-  margin-bottom:24rpx;
+  margin-bottom: 24rpx;
 }
 
 .purpose .purposeContent {
@@ -1128,36 +1137,40 @@ button::after {
   text-align: center;
 }
 
-.competitorPosition{
+.competitorPosition {
   font-size: 24rpx;
   color: #999;
   letter-spacing: 0;
   line-height: 24rpx;
   text-align: left;
-  margin-left:32rpx;
+  margin-left: 32rpx;
 }
 
-.more{
-    color:#009eff;
-    font-size: 12px;
+.more {
+  color: #009eff;
+  font-size: 12px;
 }
 
-.checkEmail{
-    color: #ccc;
+.checkEmail {
+  color: #ccc;
 }
-.coreMemberLeftBox{
-  width:82rpx;
-  height:82rpx;
-  margin-right:14rpx;
+
+.coreMemberLeftBox {
+  width: 82rpx;
+  height: 82rpx;
+  margin-right: 14rpx;
   border-radius: 50%;
 }
-.projectDetailLine{
+
+.projectDetailLine {
   padding: 0 16rpx;
-border-right:1rpx solid #999999;
+  border-right: 1rpx solid #999;
 }
-.projectDetailLine:first-child{
-  padding-left:0;
+
+.projectDetailLine:first-child {
+  padding-left: 0;
 }
-.projectDetailLine:last-child{
-  border-right:none;
+
+.projectDetailLine:last-child {
+  border-right: none;
 }
