--- a/Weitianshi/pages/contacts/contacts/contacts.wxml
+++ b/Weitianshi/pages/contacts/contacts/contacts.wxml
@@ -7,7 +7,7 @@
     <view class="screen screenm" bindtap="screenSth">筛选</view>
 </view>
  <view bindtap="goTo">
-            <image src="http://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/img-banner.png" class="contactsPic"></image>
+            <image src="https://weitianshi-2017.oss-cn-shanghai.aliyuncs.com/image/20170904/img-banner.png" class="contactsPic"></image>
         </view>
 <!--资本对接-->
 <view class="s_frame" hidden="{{contacts=='' || !contacts}}">
