--- a/Weitianshi/pages/contacts/contacts/contacts.wxss
+++ b/Weitianshi/pages/contacts/contacts/contacts.wxss
@@ -4,7 +4,7 @@ page {
   height: 100%;
 }
 .s_frame{
-  height: 1052rpx;
+  height: 720rpx;
   position:static;
 }
 /*空状态*/
@@ -94,8 +94,13 @@ page {
   color:#40587a;
   margin-top:9rpx;
   margin-right:32rpx;
-  }
+}
 
+.banner{
+    position: fixed;
+    left: 0;
+    top: 56rpx;
+}
 /*用户信息*/
 
 .card {
