--- a/Weitianshi/pages/my/my/my.wxml
+++ b/Weitianshi/pages/my/my/my.wxml
@@ -7,7 +7,7 @@
   <!--个人描述-->
   <template is="userIntro" data="{{user:user,canEdit:canEdit}}"></template>
  <!--项目融资-->
-  <template is="financingProject" data="{{project_info:project_info,text:'我的项目库',canEdit:canEdit}}"></template>
+  <template is="financingProject" data="{{project_info:project_info,text:'项目店铺',canEdit:canEdit}}"></template>
  
  <!--投资案例-->
   <template is="investProject" data="{{invest_case:invest_case,canEdit:canEdit}}"></template>
