--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -30,6 +30,10 @@
   <view class="flex">
     <view class="userName">张三</view>
     <view class="userPosition">投资经理</view>
+    <view class="flex">
+      <image src="/img/icon-renzheng@2x.png" class="renzheng"></image>
+      <view class="userPart1">{{user.authentication[0].group_title}}</view>
+    </view>
   </view>
   <view class="userCompany">杭州投着乐网络科技有限公司</view>
   <view class="userPic"></view>
@@ -46,7 +50,7 @@
   <block wx:for="{{myProject}}" wx:key="{{index}}">
     <view class="outBox picFather" wx:if="{{item.handle_status != 2 }}">
       <view class="insideBox">
-        <view data-id="{{item.project_id}}" catchtap="detail">
+        <view data-id="{{item.project_id}}"  bindtap="detail">
           <view class="flex">
             <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
             <image src="/img/img-dujiaqianyue1@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
@@ -64,15 +68,20 @@
             <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}">{{item.pro_stage.stage_name}}</view>
             <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">{{item.pro_area.area_title}}</view>
           </view>
-          <view class="star">
-            <image src="/img/icon-zhiding-n@2x.png" class="starPic"></image>
-            <!-- <image src="/img/icon-zhiding-s@2x.png" class="starPic"></image> -->
+          <view class="star"   catchtap="clickProject"  data-id="{{item.project_id}}" data-index="{{index}}">
+            <image src="/img/icon-zhiding-n@2x.png" class="starPic" wx:if='{{item.check==true}}></image>
+             <image src="/img/icon-zhiding-s@2x.png" class="starPic" wx:if='{{item.check==false}}></image> 
           </view>
         </view>
       </view>
     </view>
   </block>
 </scroll-view>
+<!-- <view class="emptyStyle">
+  <view>您的店铺是空的</view>
+  <view>点击“新增项目”打造店铺</view>
+</view> -->
+
 <view class="highBox"></view>
 <view class="aboutNetwork flex">
   <view bindtap="decorate"><label class="shop">店铺装修</label></view>
