--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -1,27 +1,36 @@
-<!-- <import src="/pages/Template/Template.wxml" />
-<scroll-view style="height:2378rpx;" scroll-y="true" bindscrolltolower='myPublicProject'>
-
-  <!--已发布的项目-->
-<!-- <block wx:for="{{myProject}}" wx:key="{{project_id}}" wx:for-item="myProject">
-    <template is="projectList" data="{{myProject:myProject,index:index}}"></template>
-  </block>
-  <view class="block"></view> -->
-<!--没有更多-->
-<!-- <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view> -->
-
-<!--空状态-->
-<!-- <view wx:if="{{myProject==''}}">
-    <image class="empty" src="/img/empty.png"></image>
-  </view>
-</scroll-view> -->
-
-<!--按钮-->
-<!-- <template is="buttonOne" wx:if="{{currentTab!=1}}" data="{{...buttonOne}}"></template> -->
 <view class="	screen flex">
-  <label class="box">领域</label>
-  <label class="box">轮次</label>
-  <label class="box">金额</label>
-  <label class="box">地区</label>
+    <block wx:for='{{tab}}' wx:key='index'>
+    <view class='tabIndex' data-index='{{index}}' bindtap='move'>
+      {{item.name}}
+      <image src='/img/downArrow.png'></image>
+      <view class='dropDown flex withAnimate'>
+        <!--领域  -->
+        <block wx:for='{{industry}}' wx:if='{{currentIndex==0}}' wx:key='item.industry_id' wx:for-item='item1' wx:for-index='index1'>
+          <view class='checkbox' >
+            {{item1.industry_name}}
+          </view>
+        </block>
+        <!--轮次  -->
+        <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
+          <view class='checkbox'>
+            {{item2.stage_name}}
+          </view>
+        </block>
+        <!--金额  -->
+        <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
+          <view class='checkbox'>
+            {{item3.scale_money}}
+          </view>
+        </block>
+        <!--地区  -->
+        <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
+          <view class='checkbox'>
+            {{item4.area_title}}
+          </view>
+        </block>
+      </view>
+    </view>
+  </block>
 </view>
 <view class="classname">
   <image src="/img/img-bg.jpg" class="bgPic"></image>
