--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -327,3 +327,45 @@ page {
 .picFather {
   position: relative;
 }
+
+.withAnimate {
+  transition: all 300ms ease;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  -moz-perspective: 1000;
+  -ms-perspective: 1000;
+  perspective: 1000;
+}
+.tabIndex{
+  width: 25%;
+}
+.tabIndex image{
+  width: 40rpx;
+  height: 40rpx;
+}
+.dropDown{
+  flex-wrap: wrap;
+  position: absolute;
+  top: 50rpx;
+  left: 0;
+  background: white;
+  z-index:999;
+}
+.checkbox{
+  width: 144rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  border: 1px solid #f0f0f0;
+  border-radius: 4rpx;
+  margin-left:32rpx;
+  margin-bottom: 32rpx;
+  text-align: center;
+  
+}
