--- a/Weitianshi/pages/my/projectShop/shopEdit/shopEdit.wxss
+++ b/Weitianshi/pages/my/projectShop/shopEdit/shopEdit.wxss
@@ -48,12 +48,22 @@
   color: #999;
   line-height: 36rpx;
 }
+
 .pushPro {
   background: #40587a;
   width: 100%;
   height: 88rpx;
   justify-content: center;
-  line-height:88rpx;
+  line-height: 88rpx;
   border-radius: 0;
-  color:#fff;
+  color: #fff;
+}
+
+.tips {
+  font-size: 28rpx;
+  color: #999;
+  letter-spacing: 0;
+  line-height: 28rpx;
+  text-align: center;
+  margin-top: 40rpx;
 }
