--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxml
@@ -1,37 +1,52 @@
 <view class="	screen flex">
-    <block wx:for='{{tab}}' wx:key='index'>
-    <view class='tabIndex' data-index='{{index}}' bindtap='move'>
+  <!--筛选  -->
+  <block wx:for='{{tab}}' wx:key='index'>
+    <view class='tabIndex {{currentIndex==index?"deepBlue" : ""}}' data-index='{{index}}' bindtap='move'>
       {{item.name}}
-      <image src='/img/downArrow.png'></image>
-      <view class='dropDown flex withAnimate'>
-        <!--领域  -->
-        <block wx:for='{{industry}}' wx:if='{{currentIndex==0}}' wx:key='item.industry_id' wx:for-item='item1' wx:for-index='index1'>
-          <view class='checkbox' >
-            {{item1.industry_name}}
-          </view>
-        </block>
-        <!--轮次  -->
-        <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
-          <view class='checkbox'>
-            {{item2.stage_name}}
-          </view>
-        </block>
-        <!--金额  -->
-        <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
-          <view class='checkbox'>
-            {{item3.scale_money}}
-          </view>
-        </block>
-        <!--地区  -->
-        <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
-          <view class='checkbox'>
-            {{item4.area_title}}
-          </view>
-        </block>
-      </view>
+      <image class='withAnimate {{currentIndex==index?"rotate" : ""}}' src='/img/downArrow.png'></image>
     </view>
   </block>
+  <!--下拉框  -->
+  <view class='dropDown withAnimate'>
+    <view class='dropTitle' wx:if='{{currentIndex==0}}'>项目领域</view>
+    <view class='dropTitle' wx:if='{{currentIndex==1}}'>融资轮次</view>
+    <view class='dropTitle' wx:if='{{currentIndex==2}}'>期望融资</view>
+    <view class='dropTitle' wx:if='{{currentIndex==3}}'>项目地区</view>
+    <!--多选框  -->
+    <view class='flex dropFlex'>
+      <!--领域  -->
+      <block wx:for='{{industry}}' wx:if='{{currentIndex==0}}' wx:key='item.industry_id' wx:for-item='item1' wx:for-index='index1'>
+        <view class='checkbox {{item1.check==true?"checkOne":""}}' bindtap='tagsCheck'>
+          {{item1.industry_name}}
+        </view>
+      </block>
+      <!--轮次  -->
+      <block wx:for='{{stage}}' wx:if='{{currentIndex==1}}' wx:key='item.stage_id' wx:for-item='item2' wx:for-index='index2'>
+        <view class='checkbox'>
+          {{item2.stage_name}}
+        </view>
+      </block>
+      <!--金额  -->
+      <block wx:for='{{scale}}' wx:if='{{currentIndex==2}}' wx:key='item.sacle_id' wx:for-item='item3' wx:for-index='index3'>
+        <view class='checkbox scale'>
+          {{item3.scale_money}}
+        </view>
+      </block>
+      <!--地区  -->
+      <block wx:for='{{hotCity}}' wx:if='{{currentIndex==3}}' wx:key='item.area_id' wx:for-item='item4' wx:for-index='index4'>
+        <view class='checkbox'>
+          {{item4.area_title}}
+        </view>
+      </block>
+    </view>
+    <!--重置确定  -->
+    <view class='btnGroup flex' wx:if="{{currentIndex!=5}}">
+      <button bindtap='reset'>重置</button>
+      <button bindtap='searchCertain'>确定</button>
+    </view>
+  </view>
 </view>
+<!--图片  -->
 <view class="classname">
   <image src="/img/img-bg.jpg" class="bgPic"></image>
 </view>
@@ -93,7 +108,9 @@
 
 <view class="highBox"></view>
 <view class="aboutNetwork flex">
-  <view bindtap="decorate"><label class="shop">店铺装修</label></view>
+  <view bindtap="decorate">
+    <label class="shop">店铺装修</label>
+  </view>
   <view bindtap="editDetail" class="newProject">新增项目</view>
 </view>
 <!-- <view class="aboutNetwork flex">
