--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -330,7 +330,7 @@ page {
 
 
 .withAnimate {
-  transition: all 300ms ease;
+  transition: all 600ms ease;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
@@ -346,28 +346,67 @@ page {
 }
 .tabIndex{
   width: 25%;
+  vertical-align: center;
 }
 .tabIndex image{
-  width: 40rpx;
-  height: 40rpx;
+  width: 12rpx;
+  height: 6rpx;
+  padding-bottom: 6rpx;
 }
 .dropDown{
-  flex-wrap: wrap;
   position: absolute;
-  top: 50rpx;
+  top: 80rpx;
   left: 0;
   background: white;
   z-index:999;
+  margin-bottom: 12rpx;
+}
+.dropTitle{
+  color: #333;
+  font-size: 28rpx;
+  font-family:PingFangSC-Regular;
+  text-align: left;
+  margin-left: 32rpx;
+}
+.dropFlex{
+ flex-wrap: wrap;
 }
 .checkbox{
   width: 144rpx;
-  height: 60rpx;
-  line-height: 60rpx;
+  height: 56rpx;
+  line-height: 56rpx;
   border: 1px solid #f0f0f0;
   border-radius: 4rpx;
   margin-left:32rpx;
   margin-bottom: 32rpx;
   text-align: center;
+}
+.btnGroup button{
+  width: 322rpx;
+  height: 88rpx;
+  color: white;
+  background:#40587a;
+  border-radius:4px;
+  border: 1px solid #40587a;
+  margin-left: 32rpx;
+}
+.btnGroup button:first-child{
+  background: white;
+  color: #40587a;
+  border: 1px solid #40587a;
+}
+.scale{
+  width: 208rpx;
+}
+.deepBlue{
+  color: #40587a;
+}
+.rotate{
+  transform: rotate(180deg);
+  transform-origin:6rpx 3rpx;
+}
+.checkOne{
+  
 }  
 
 /*为空  */
