--- a/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
+++ b/Weitianshi/pages/my/projectShop/projectShop/projectShop.wxss
@@ -359,14 +359,14 @@ page {
   left: 0;
   background: white;
   z-index:999;
-  margin-bottom: 12rpx;
+  padding-bottom: 12rpx;
 }
 .dropTitle{
   color: #333;
   font-size: 28rpx;
   font-family:PingFangSC-Regular;
   text-align: left;
-  margin-left: 32rpx;
+  margin-left: 34rpx;
 }
 .dropFlex{
  flex-wrap: wrap;
@@ -406,7 +406,10 @@ page {
   transform-origin:6rpx 3rpx;
 }
 .checkOne{
-  
+  border: 1px solid #40587a;
+}
+.search_icon{
+  padding: 10rpx 30rpx;
 }  
 
 /*为空  */
